[package]
name = "sleep-parser"
version = "0.0.1"
license = "Apache-2.0"
repository = "https://github.com/datrs/sleep-parser"
documentation = "https://docs.rs/sleep-parser"
description = "Parse Dat protocol SLEEP files"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]

[dependencies]
combine = "3.0.0"
failure = "0.1.1"
